--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html>
             <body>
-                <h1> This is a Header </h1>
+                <h1>This is a Header</h1>
+                <p1>This is a paragraph</p1>
             </body>
     </html>
