Fourth commit: setting up npm, setup .gitignore--in that respective order

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <html>
             <body>
                 <h1>This is a Header</h1>
-                <p1>This is a paragraph.</p1>
-                <p2>This is another paragraph.</p2>
+                <p1>This is a paragraph.</p1> <br>
+                <p2>This is another paragraph.</p2> <br>
+                <p3>The browser will immediately refresh to reflect this addition/change once saved</p3>
             </body>
     </html>
